# yt-dlp-audio-normalize

./: .mega-linter.yml  README.md  codecov.yml  lefthook.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish.yml
tests/: conftest.py  test_audio_normalize.py
