[project]
name = "yt-dlp-audio-normalize"
version = "0.3.0"
description = "yt-dlp postprocessor plugin for audio normalization using ffmpeg-normalize"
readme = "README.md"
requires-python = ">=3.10"
license = "Unlicense"
license-files = ["LICENSE"]
authors = [{ name = "9c5s" }]
keywords = ["audio", "ffmpeg", "loudness", "normalization", "yt-dlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
  "ffmpeg-normalize>=1.37.3",
]

[project.urls]
Issues = "https://github.com/9c5s/yt-dlp-AudioNormalize/issues"
Repository = "https://github.com/9c5s/yt-dlp-AudioNormalize"

[dependency-groups]
dev = [
  "actionlint-py>=1.7.11.24",
  "lefthook>=2.1.3",
  "pyright>=1.1.408",
  "ruff>=0.15.5",
  "tombi>=0.9.2",
  "zizmor>=1.22.0",
  { include-group = "test" },
]
test = [
  "pytest>=9.0",
  "pytest-cov>=6.0",
  "yt-dlp>=2026.3.3",
]

[build-system]
requires = ["setuptools>=82.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["yt_dlp_plugins/"]
stubPath = "typings"
typeCheckingMode = "strict"

[tool.pytest]
addopts = [
  "--cov-fail-under=90",
  "--cov-report=term-missing",
  "--cov=yt_dlp_plugins",
  "--strict-markers",
  "--tb=short",
  "-v",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4
preview = true
include = ["*.py", "*.pyi", "**/pyproject.toml"]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  ".vscode",
  ".idea",
]
respect-gitignore = true
show-fixes = true
output-format = "full"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203",
  "D213",
  "COM812",
  "ISC001",
  "INP001",
  "FIX002",
  "TD002",
  "TD003",
  "ERA001",
  "T201",
  "D400",
  "D415",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|dummy|unused)$"
preview = true
explicit-preview-rules = true
typing-modules = ["typing", "typing_extensions"]
task-tags = [
  "TODO",
  "FIXME",
  "HACK",
  "BUG",
  "NOBUG",
  "REQ",
  "IDEA",
  "NOTE",
  "ISSUE",
  "XXX",
  "やること",
  "修正",
  "バグ",
  "ノート",
  "問題",
  "要修正",
  "要確認",
  "仮実装",
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
ignore-fully-untyped = false
suppress-dummy-args = false
suppress-none-returning = false
mypy-init-return = true

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = []

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = false

[tool.ruff.lint.flake8-errmsg]
max-string-length = 30

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true
parametrize-names-type = "tuple"
parametrize-values-type = "list"
parametrize-values-row-type = "tuple"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = true

[tool.ruff.lint.flake8-self]
ignore-names = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
exempt-modules = ["typing", "typing_extensions"]
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "sqlalchemy.orm.DeclarativeBase",
]
runtime-evaluated-decorators = [
  "attrs.define",
  "attrs.frozen",
  "dataclasses.dataclass",
]
quote-annotations = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = false

[tool.ruff.lint.isort]
force-single-line = false
force-wrap-aliases = true
combine-as-imports = true
split-on-trailing-comma = true
required-imports = ["from __future__ import annotations"]
known-first-party = ["yt_dlp_plugins"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pep8-naming]
ignore-names = []
classmethod-decorators = [
  "classmethod",
  "pydantic.validator",
  "pydantic.field_validator",
]
staticmethod-decorators = ["staticmethod"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88
ignore-overlong-task-comments = false

[tool.ruff.lint.pydocstyle]
convention = "google"
property-decorators = [
  "property",
  "cached_property",
  "functools.cached_property",
]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "float"]
max-args = 5
max-bool-expr = 3
max-branches = 10
max-locals = 10
max-nested-blocks = 3
max-positional-args = 3
max-public-methods = 20
max-returns = 5
max-statements = 35

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
  "S105",
  "S106",
  "ARG",
  "FBT",
  "PLR2004",
  "S311",
  "ANN",
  "D",
  "PLR0913",
  "SLF001",
]
"*.pyi" = [
  "ANN401",
  "D",
]
"**/migrations/**/*.py" = [
  "ALL",
]
"conf.py" = [
  "D100",
]
"setup.py" = [
  "D",
  "ANN",
]
"docs/conf.py" = [
  "D100",
  "A001",
]
"scripts/**/*.py" = [
  "S603",
  "S607",
]
"experimental/**/*.py" = [
  "PLR2004",
  "S101",
]

[tool.setuptools.packages.find]
namespaces = true
include = ["yt_dlp_plugins*"]
